# cmake-project-structure

./: CMakeLists.txt  README.md  gemini_request  gemini_request.c
src/: input.c  input.h  main.c
